<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.todoapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_open_task"
            app:destination="@+id/nav_task">
            <argument android:name="@string/list_title"
                app:argType="string"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.todoapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.todoapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_create_task"
        android:name="com.example.todoapp.AddTaskFragment"
        android:label="@string/create_task"
        tools:layout="@layout/fragment_addtask" />

    <fragment
        android:id="@+id/nav_task"
        android:name="com.example.todoapp.TaskFragment"
        android:label="@string/task_frag"
        tools:layout="@layout/fragment_task">
        <action
            android:id="@+id/action_create_task"
            app:destination="@+id/nav_create_task"
            app:popUpTo="@id/nav_task">
            <argument
                android:name="@string/list_title"
                app:argType="string" />
        </action>
    </fragment>
</navigation>